--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UFT-8">
     <title>Hello World!</title>
+    <meta name="viewpoint" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bluestyle.css">
 </head>
 
