--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UFT-8">
-    <title>Hello World!</title>
+    <title>Git and GitHub Mastering!</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bluestyle.css">
 </head>
